# Lab3

./: CMakeLists.txt
samples/: Arifmetic.h  CMakeLists.txt  Exepcion.h  Lexema.h  MyQueue.h  MyStack.h  Operations.h  main.cpp
test/: test_lab3.cpp
